--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 
   <!-- Title -->
   <title>
-    {{ site.title }} &#124; {{ site.tagline }}
+    Aiden Symes &#124; {{ site.tagline }}
   </title>
 
   <!-- Description -->
@@ -27,7 +27,7 @@
   <meta name="msapplication-TileColor" content="#ff0000">
   <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#f2f2f2">
-  
+
   <!-- Javascript  -->
   <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
