--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
   </div>
   <div class="footer__social footer__block rule col-4">
     {% for item in site.social %}
-      <a href="{{ item[1] }}">
+      <a href="{{ item[1] }}" target="_blank">
         <h3 class="pill hover">
           {{ item[0] }}
         </h3>
