--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -5,7 +5,7 @@
 .pill {
   display: inline-block;
   padding: 0 $gutter-half;
-  margin: 0 5px 5px 0;
+  margin: 0 $gutter-half $gutter-half 0;
   border: 1px solid;
   border-radius: $gutter;
   white-space: nowrap;
@@ -35,21 +35,6 @@
     }
   }
 }
-
-// Canvas
-////////////////////////////////////////////////////////////////////////////////
-// #canvas {
-//   position: absolute;
-//   top: 0;
-//   height: 100%;
-//   left: 0;
-//   right: 0;
-//   z-index: 999;
-//   pointer-events: none;
-//   @include break-at('small') {
-//     display: none;
-//   }
-// }
 
 // Header
 /////////////////////////////////////////////////////
