--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,11 +37,12 @@
   <script src="/assets/main.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156611983-1"></script>
-  <script type="text/javascript">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135280523-1"></script>
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-167913795-1');
+
+    gtag('config', 'UA-135280523-1');
   </script>
 </head>
