--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -5,7 +5,7 @@
 .pill {
   display: inline-block;
   padding: 0 $gutter-half;
-  margin: 0 $gutter-half $gutter-half 0;
+  margin: 0 8px 8px 0;
   border: 1px solid;
   border-radius: $gutter;
   white-space: nowrap;
