--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -11,13 +11,13 @@
         <img src="{{ page.header-image }}"/>
       </div>
 
-      <div class="project__blurb rule col-8">
+      <div class="project__blurb rule col-8 col-md-6 col-sm-12">
         <h2>
           {{ page.blurb }}
         </h2>
       </div>
 
-      <div class="project__desc rule col-4">
+      <div class="project__desc rule col-4 col-md-6 col-sm-12">
         {{ content }}
 
         {% if page.role[0] %}
@@ -36,7 +36,7 @@
             Studio
           </h3>
           <a href="{{ page.studio.link }}" target="_blank">
-            <h3 class="pill hover">
+            <h3 class="pill filled hover external">
               {{ page.studio.name }}
             </h3>
           </a>
@@ -47,7 +47,7 @@
             Client
           </h3>
           <a href="{{ page.client.link }}" target="_blank">
-            <h3 class="pill hover">
+            <h3 class="pill filled hover external">
               {{ page.client.name }}
             </h3>
           </a>
@@ -59,7 +59,7 @@
           </h3>
           {% for item in page.press %}
             <a href="{{ item.link }}" target="_blank">
-              <h3 class="pill hover">
+              <h3 class="pill filled hover external">
                 {{ item.name }}
               </h3>
             </a>
@@ -69,7 +69,7 @@
 
     {% for row in page.rows %}
       {% if row.caption %}
-        <div class="col-4 project__caption rule">
+        <div class="col-8 col-md-10 col-sm-12 project__caption rule">
           <p>
             {{ row.caption }}
           </p>
@@ -124,7 +124,7 @@
           {% continue %}
         {% else %}
           {% if count < 3 %}
-            <div class="home__thumbnail col-4">
+            <div class="home__thumbnail col-4 col-md-6 col-sm-12">
               <a class="internal" href="{{ project.url }}">
                 <div class="home__thumbnail__image">
                   <img src="{{ project.thumbnail-image }}"/>
