--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
   <div class="footer__copyright footer__block rule col-4 col-md-6 col-sm-12">
     <h3>
       <a href="/privacy">
-        Privacy Policy
+        Privacy
       </a>
     </h3>
     <h3>
