--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
 
   <section class="header__toggle">
     <div class="header__info wrapper">
-      <div class="header__info__about header__block rule col-8 col-md-6 col-sm-12">
+      <div class="header__info__about header__block rule col-8 col-md-12">
         <h3 class="header__info__label">
           About
         </h3>
@@ -65,7 +65,7 @@
           {{ site.font }}
         </p>
       </div>
-      <div class="header__info__social header__block rule col-4 col-md-12">
+      <div class="header__info__social header__block rule col-4 col-md-6 col-sm-12">
         <h3 class="header__info__label">
           Social
         </h3>
