--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         </h3>
       </a>
       <h3 class="header__info__button pill hover" id="open" onclick="openInfo()">
-        Bio
+        Info
       </h3>
       <h3 class="header__info__button pill hover" id="close" onclick="closeInfo()">
         Close
@@ -71,7 +71,7 @@
         </h3>
         {% for item in site.social %}
           <a href="{{ item[1] }}" target="_blank">
-            <h3 class="pill hover external">
+            <h3 class="pill filled hover external">
               {{ item[0] }}
             </h3>
           </a>
