--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     {% include header.html %}
 
     <div class="wrapper">
-      <div class="default__content col-8 col-sm-12">
+      <div class="default__content col-6-4 col-md-8-3 col-sm-12">
         {{ content | newline_to_br }}
       </div>
     </div>
