--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -21,7 +21,7 @@ img {
 // Wrapper
 /////////////////////////////////////////////////////
 .wrapper {
-  width: 85%;
+  width: 80%;
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
@@ -31,12 +31,15 @@ img {
   grid-column-gap: $gutter;
   grid-row-gap: $gutter;
   @include break-at("md") {
-    width: 90%;
+    width: 85%;
     grid-column-gap: $gutter-half;
     grid-row-gap: $gutter-half;
     &__home {
       grid-column-gap: $gutter-quarter;
     }
+  }
+  @include break-at("md") {
+    width: 90%;
   }
 }
 
