remove calc in scss

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -21,7 +21,7 @@
 
 .flex {
   display: flex;
-  margin: 0 calc($gutter-half * -1);
+  margin: 0 $gutter-half * -1;
   .project__image--flex {
     padding: 0 $gutter-half;
     flex-basis: 0%;
@@ -118,7 +118,7 @@ header {
   @include transition(padding, 0.2s, ease-out);
   &:hover {
     padding-top: $gutter-half;
-    padding-bottom: calc($gutter * 1.5);
+    padding-bottom: $gutter * 1.5;
   }
 }
 
