--- a/_includes/header.html
+++ b/_includes/header.html
@@ -67,7 +67,7 @@
       </div>
       <div class="header__info__social header__block rule col-4 col-md-6 col-sm-12">
         <h3 class="header__info__label">
-          Social
+          More
         </h3>
         {% for item in site.social %}
           <a href="{{ item[1] }}" target="_blank">
