--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,11 +13,11 @@
           <div class="header__color__picker--toggle preload"></div>
         </div>
       </div>
-      <a href="https://fonts.aidensymes.com/" target="_blank">
+      <!-- <a href="https://fonts.aidensymes.com/" target="_blank">
         <h3 class="header__info__button pill hover external">
           Fonts
         </h3>
-      </a>
+      </a> -->
       <h3 class="header__info__button pill hover" id="open" onclick="openInfo()">
         Info
       </h3>
