--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="wrapper">
   <div class="footer__contact footer__block rule col-4 col-md-6 col-sm-12">
     <h3>
-      Site design & development: Aiden Symes, {{ 'now' | date: "%Y" }}
+      ⓒ {{ 'now' | date: "%Y" }}, Aiden Symes
     </h3>
   </div>
   <div class="footer__copyright footer__block rule col-4 col-md-6 col-sm-12">
