--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -174,6 +174,9 @@ header {
 
 .project__text {
   margin-bottom: $margin-md;
+  @include break-at("sm") {
+    margin: $margin-md 0;
+  }
 }
 
 .project__spacer {
