--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
       </div>
       <div class="header__info__services header__block rule col-4 col-md-6 col-sm-12">
         <h3 class="header__info__label">
-          Services
+          Capabilities
         </h3>
         <div class="header__info__services__list">
           {% for service in site.services %}
