--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,7 @@
         {% else %}
           <div class="home__thumbnail col-3 col-sm-12">
         {% endif %}
+          <div class="home__thumbnail__inner">
           <a class="internal" href="{{ project.url }}">
             <div class="home__thumbnail__image">
               <img src="{{ project.thumbnail-image }}"/>
@@ -32,6 +33,7 @@
               </h3>
             {% endfor %}
           </div>
+        </div>
         </div>
       {% endfor %}
     </div>
