--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -76,13 +76,21 @@
               <p>
                 {{ block.text }}
               </p>
-            {% elsif block.image contains '.mp4' %}
-              <video width="100%" autoplay="autoplay" loop="loop" autoplay loop muted defaultMuted playsinline>
-                <source src="{{ block.image }}" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
             {% else %}
-              <img src="{{ block.image }}"/>
+              {% if block.device %}
+                <div class="device">
+              {% endif %}
+              {% if block.image contains '.mp4' %}
+                <video width="100%" autoplay="autoplay" loop="loop" autoplay loop muted defaultMuted playsinline>
+                  <source src="{{ block.image }}" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+              {% else %}
+                <img src="{{ block.image }}"/>
+              {% endif %}
+              {% if block.device %}
+                </div>
+              {% endif %}
             {% endif %}
           </div>
         {% endif %}
