--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -22,7 +22,7 @@ img {
 /////////////////////////////////////////////////////
 .wrapper {
   width: 85%;
-  max-width: 1280px;
+  max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
   display: grid;
@@ -65,6 +65,9 @@ body {
         }
       }
     }
+    .device {
+      background-color: $black-alt;
+    }
     .rule {
       border-color: $gray;
     }
@@ -93,6 +96,9 @@ body {
           color: $black;
         }
       }
+    }
+    .device {
+      background-color: $gray-alt;
     }
     .rule {
       border-color: $black;
