--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -2,6 +2,8 @@
 /////////////////////////////////////////////////////
 $white: #fcfcfc;
 $gray: #f2f2f2;
+$gray-alt: #e9e9e9;
+$black-alt: #272727;
 $black: #1a1a1a;
 
 // Pointer
@@ -40,6 +42,10 @@ $margin-xl: $gutter * 16;
   top: $gutter;
   position: -webkit-sticky; /* Required for Safari */
   position: sticky;
+}
+
+@mixin shadow() {
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 // Breakpoints
